@@ -1451,6 +1451,9 @@ func getErrorDescription(errorCode int) string {
 		description = "Parameter missing"
 	case 960:
 		description = "Parameter is invalid"
+	case 10006:
+		// When a script runs and a service is already executing (for example, during a long loop), the FileMaker error 10006, "kServiceAlreadyRunning," is returned.
+		description = "Service is already running"
 	case 10600:
 		description = "Schedule at specified index no longer exists"
 	case 10601:
@@ -1467,6 +1470,9 @@ func getErrorDescription(errorCode int) string {
 		description = "No applicable files for this operation"
 	case 10906:
 		description = "Script is missing"
+	case 10908:
+		// When a script schedule stops executing, the FileMaker error code 10908, "System script aborted," is returned.
+		description = "System script aborted"
 	case 11005:
 		description = "Disconnect client invalid ID"
 	case 25004:
