@@ -3,6 +3,7 @@ fmcsadmin
 This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.
 
 Version: 0.9.1 (in development)
+- Add error messages for the FileMaker error code 10006 and 10908.
 - [BUG FIX] Fix logging out process.
 
 Version: 0.9.0 (beta)
